# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beltbuckle"
version = "0.0.0"
description = "A sample python package."
readme = "README.md"
authors = [{ name = "Brendan Walsh", email = "brennymw@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["bootstrap", "beltbuckle"]
dependencies = [
    "pip"
]
requires-python = ">=3.9"

    [project.optional-dependencies]
    dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

    [project.urls]
    Homepage = "https://github.com/BrendanWalsh/beltbuckle"

    [project.scripts]
    realpython = "beltbuckle.__main__:main"

[tool.bumpver]
current_version = "0.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

    [tool.bumpver.file_patterns]
    "pyproject.toml" = [
        'current_version = "{version}"',
        'version = "{version}"',
    ]
    "src/reader/__init__.py" = ["{version}"]
    "src/reader/__main__.py" = ["- beltbuckle v{version}"]

[tool.isort]
profile                   = "black"
import_heading_stdlib     = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "Reader imports"

[tool.mypy]
strict = true

    [[tool.mypy.overrides]]
    module                 = "feedparser"
    ignore_missing_imports = true
